tests/baselines/reference/computedPropertyNames8_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames8_ES5.ts(5,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames8_ES5.ts(5,9): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames8_ES5.ts(6,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames8_ES5.ts(6,9): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames8_ES5.ts (4 errors) ====
    function f<T, U extends string>() {
        var t: T;
        var u: U;
        var v = {
            [t]: 0,
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
            [u]: 1
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        };
    }